<resources>
    <string name="app_name">Anode VPN</string>
    <string name="navigation_vpn">VPN</string>
    <string name="navigation_wallet">PKT Wallet</string>
    <string name="navigation_profile">Profile</string>
    <string name="action_account_settings">Sign up</string>
    <string name="action_check_update">Check for update</string>
    <string name="action_debug">Debug screen</string>
    <string name="action_logout">Log out</string>
    <string name="action_closeapp">Close app</string>
    <string name="action_aboutapp">About</string>
    <string name="action_login">Sign in</string>
    <string name="action_skip">Skip</string>
    <string name="action_wallet">Wallet</string>
    <string name="action_wallet_debug">Debug logs</string>
    <string name="action_wallet_delete_db">Delete DB</string>
    <string name="action_wallet_info">Details</string>
    <string name="action_settings">Settings</string>
    <string name="toast_no_internet">You lost your internet connection</string>
    <string name="text_publicipv4">Public IPv4: </string>
    <string name="text_publicipv6">Public IPv6: </string>
    <string name="text_load">Load: </string>
    <string name="downloading_update">Downloading new version…</string>
    <string name="title_activity_vpn_servers_list">AnodeVPN Servers</string>
    <string name="prompt_email">enter email</string>
    <string name="hint_enter_username">enter username</string>
    <string name="prompt_password">password</string>
    <string name="prompt_seed_password">seed password</string>
    <string name="prompt_oldpassword">old password</string>
    <string name="prompt_newpassword">new password</string>
    <string name="prompt_confirmpassword">confirm password</string>
    <string name="link_forgotpassword">forgot password?</string>
    <string name="title_forgotpassword">Forgot password?</string>
    <string name="action_sign_in">Sign in</string>
    <string name="label_already_have_account">already have an account? Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_changepassword">Change password</string>
    <string name="label_forgotpassword">"To recover your password\nenter your email"</string>
    <string name="label_newpassword">"Enter a new password"</string>
    <string name="action_continue">Continue</string>
    <string name="action_share_log">Share log</string>
    <string name="action_next">Next</string>
    <string name="label_passwordRecoveryMsg">"We have sent a recovery link to\nyour email.Please check it and\nfollow the link"</string>
    <string name="label_email_verification">"We have sent a verification link to your email."</string>
    <string name="label_rating">"How is your VPN service?"</string>
    <string name="email_verification_message">"We have sent a verification link to your email.\nPlease check your email."</string>
    <string name="contentdescription_password_image">Password image</string>
    <string name="contentdescription_login_image">Login image</string>
    <string name="rating1_1">1.1 comment</string>
    <string name="rating1_2">1.2 comment</string>
    <string name="rating1_3">1.3 comment</string>
    <string name="rating1_4">1.4 comment</string>
    <string name="rating1_5">1.5 comment</string>
    <string name="rating2_1">2.1 comment</string>
    <string name="rating2_2">2.2 comment</string>
    <string name="rating2_3">2.3 comment</string>
    <string name="rating2_4">2.4 comment</string>
    <string name="rating2_5">2.5 comment</string>
    <string name="rating3_1">3.1 comment</string>
    <string name="rating3_2">3.2 comment</string>
    <string name="rating3_3">3.3 comment</string>
    <string name="rating3_4">3.4 comment</string>
    <string name="rating3_5">3.5 comment</string>
    <string name="rating4_1">4.1 comment</string>
    <string name="rating4_2">4.2 comment</string>
    <string name="rating4_3">4.3 comment</string>
    <string name="rating4_4">4.4 comment</string>
    <string name="rating4_5">4.5 comment</string>
    <string name="wallet_activity_title">PKT Wallet</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="wallet_address">My PKT wallet address</string>
    <string name="wallet_payments">Transactions</string>
    <string name="wallet_see_history">Older transactions</string>
    <string name="wallet_coin">PKT</string>
    <string name="action_older_transactions">Transactions</string>
    <string name="action_view_wallet_log">Logs</string>
    <string name="action_view_wallet_info">Info</string>
    <string name="action_view_wallet_delete_db">Delete DB</string>
    <string name="action_reload">Refresh</string>
    <string name="wallet_create">Create PKT wallet</string>
    <string name="wallet_create_label">Setup your PKT wallet</string>
    <string name="send_pkt_title">Send Transaction</string>
    <string name="send_pkt_receivers_address">Receiver\'s PKT address</string>
    <string name="send_pkt_amount">PKT amount</string>
    <string name="send_pkt_password">Wallet password</string>
    <string name="send_pkt_send_payment">Send PKT</string>
    <string name="status_connected">VPN connected</string>
    <string name="status_disconnected">VPN disconnected</string>
    <string name="status_connecting">VPN connecting</string>
    <string name="status_canceled">VPN connection canceled</string>
    <string name="status_error">VPN connection error</string>
    <string name="status_request_authorization">VPN request authorization</string>
    <string name="status_authorized">VPN authorizing…</string>
    <string name="status_authorization_failed">VPN authorization failed</string>
    <string name="title_activity_wallet">MainActivity</string>
    <string name="wallet_status_disconnected">Connecting to peers</string>
    <string name="wallet_status_syncing_headers">Downloading:</string>
    <string name="wallet_status_syncing_transactions">Scanning:</string>
    <string name="wallet_status_synced">Block: </string>
    <string name="wallet_status_unlocking">Unlocking wallet…</string>
    <string name="wallet_status_unlock">Wallet unlocked</string>
    <string name="minutes_ago">minutes old</string>
    <string name="minute_ago">minute old</string>
    <string name="seconds_ago">seconds old</string>
    <string name="creating_wallet">Creating wallet please wait…</string>
    <string name="generating_wallet_seed">Generating seed phrase…</string>
    <string name="recovering_wallet">Recovering wallet please wait…</string>
    <string name="wallet_address_loading">loading address…</string>
    <string name="wallet_seed_length_msg">Seed must be 15 words.</string>
    <string name="about_description">AnodiumVPN is an application that provides VPN connections using CJDNS while also using PKT to pay for faster VPN connection speed.</string>
    <string name="about_data">Anode is collecting a set of data regarding the operation of the application. In case of abnormal operation they can help us identify problems and improve the experience. We would like to ask for your consent in order to collect these data.</string>
    <string name="about_consent">I agree</string>
    <string name="msg_vpn_connecting">VPN Connecting</string>
    <string name="msg_vpn_timeout">Taking a long time to connect, VPN server may not be working.</string>
    <string name="msg_checking_version">"Checking for newer Anodium version…"</string>
    <string name="label_wallet_change_password_msg">Password change.</string>
    <string name="title_activity_create">create</string>
    <string name="title_activity_create_wallet">createWallet</string>
    <string name="button_connect">Start</string>
    <string name="button_disconnect">Stop</string>
    <string name="button_send">Send</string>
    <string name="button_vpn_list">VPN List</string>
    <string name="action_create_account">Create account</string>
    <string name="button_resend_email">Resend Email</string>
    <string name="button_goto_email">Go to Email</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_wallet_recover_from_seed">Recover from seed</string>
    <string name="button_wallet_create">Create wallet</string>
    <string name="button_wallet_recover_wallet">Recover wallet</string>
    <string name="button_wallet_change_password">Change password</string>
    <string name="button_wallet_update_pin">Update PIN</string>
    <string name="button_keep_waiting">Keep waiting</string>
    <string name="button_vpn_disconnect">Disconnect</string>
    <string name="button_generate_wallet_password">Generate Password</string>
    <string name="button_show_seed">Show seed</string>
    <string name="button_cjdns_stats">Cjdns stats</string>
    <string name="button_wallet_stats">Wallet stats</string>
    <string name="button_set_pin">Set PIN</string>
    <string name="button_data_collection">Data collection</string>
    <string name="button_connect_pktcube">Connect to Pkt.cube</string>
    <string name="button_disconnect_pktcube">Disconnect Pkt.cube</string>
    <string name="action_wallet_stats">Stats</string>
    <string name="action_wallet_pin">Set PIN</string>
    <string name="action_wallet_change_passphrase">Change password</string>
    <string name="password_prompt_title">Set wallet password</string>
    <string name="password_prompt_label_password">Enter your wallet password</string>
    <string name="passwords_not_match">Passwords do not match.</string>
    <string name="pin_prompt_title">Set wallet PIN</string>
    <string name="prompt_label_pin">Use a PIN\nfor easier access</string>
    <string name="prompt_newpin">new PIN</string>
    <string name="prompt_pin">PIN</string>
    <string name="prompt_confirmpin">confirm pin</string>
    <string name="pins_not_match">Pins do not match.</string>
    <string name="wallet_password_validating">Validating your password.</string>
    <string name="wallet_sending_coins">Sending PKT cash…</string>
    <string name="wallet_not_enough_balance">Wallet does not have enough balance</string>
    <string name="wallet_invalid_address">Invalid address.</string>
    <string name="wallet_unknown_error_sending_pkt">Unknown error when trying to send PKT</string>
    <string name="wallet_wrong_password">Wrong password</string>
    <string name="seed_prompt_title">Create PKT Wallet</string>
    <string name="wallet_create_title">Create PKT Wallet</string>
    <string name="wallet_create_seed_label">This is your backup seed phrase</string>
    <string name="wallet_recover_seed_label">Write your seed phrase</string>
    <string name="wallet_recovery_success">Wallet recovery success!</string>
    <string name="wallet_creation_success">Wallet creation success!</string>
    <string name="seed_wrong_password">Wrong seed password</string>
    <string name="wallet_create_seed_instructions">You must write down these words and keep them in a safe place. You will need these words if you ever need to recover your wallet.</string>
    <string name="wallet_write_seed_label">Enter the 15 word seed phrase separated by spaces below and the seed password if the seed is encrypted.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>