<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wallet">

    <fragment
        android:id="@+id/navigation_vpn"
        android:name="co.anode.anodium.ui.vpn.VPNFragment"
        android:label="@string/navigation_vpn"
        tools:layout="@layout/fragment_vpn" />
    <fragment
        android:id="@+id/navigation_wallet"
        android:name="co.anode.anodium.ui.wallet.WalletFragment"
        android:label="@string/navigation_wallet"
        tools:layout="@layout/fragment_wallet" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="co.anode.anodium.ui.profile.ProfileFragment"
        android:label="@string/navigation_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>