<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.vpn.VPNFragment"
    android:id="@+id/fragment_vpn">
    <include layout="@layout/statusbar"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_world_map"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"/>
    <ToggleButton
        android:id="@+id/buttonconnectvpns"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/round_button"
        android:textOff="@string/button_connect"
        android:textOn="@string/button_disconnect"
        android:textSize="12sp"
        android:paddingTop="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/v4publicip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttonconnectvpns"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/v6publicip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/v4publicip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/buttonVPNList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_vpn_list"
        android:fontFamily="@font/lato"
        android:layout_marginBottom="@dimen/bottom_button_margin"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#C9DDE9"
        android:background="@drawable/buttonshape" />
    <Button
        android:id="@+id/buttonConnectCube"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_connect_pktcube"
        android:fontFamily="@font/lato"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/buttonVPNList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#C9DDE9"
        android:background="@drawable/buttonshape" />
</androidx.constraintlayout.widget.ConstraintLayout>
