<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:id="@+id/fragmentsendPayment"
    android:fitsSystemWindows="true"
    tools:context=".SendPaymentFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimarybackground">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/editTextReceiverAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp"
            android:text="@string/send_pkt_title"
            android:layout_marginBottom="30dp"/>
        <EditText
            android:id="@+id/editTextReceiverAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="@dimen/editfield_margin"
            android:layout_marginEnd="@dimen/editfield_margin"
            android:inputType="text"
            android:hint="@string/send_pkt_receivers_address"
            app:layout_constraintBottom_toTopOf="@+id/editTextPKTAmount"
            android:layout_marginBottom="20dp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/editTextPKTAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="@dimen/editfield_margin"
            android:layout_marginEnd="@dimen/editfield_margin"
            android:inputType="number"
            android:hint="@string/send_pkt_amount"
            app:layout_constraintBottom_toTopOf="@+id/paymentpasswordLayout"
            android:layout_marginBottom="20dp"
            android:autofillHints="" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paymentpasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/editfield_margin"
            android:layout_marginEnd="@dimen/editfield_margin"
            app:layout_constraintBottom_toTopOf="@+id/button_sendPKTPayment"
            android:layout_marginBottom="20dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/editTextPKTPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/send_pkt_password"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button_sendPKTPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_pkt_send_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/bottom_button_margin"
        android:textColor="#C9DDE9"
        android:background="@drawable/buttonshape"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>