<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimarybackground"
    android:orientation="vertical"
    tools:context="co.anode.anodium.SignUpActivity">
    <include layout="@layout/statusbar"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/bottomContainer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/signin_bottom_container">
            <ImageView
                android:id="@+id/imageView"
                android:layout_above="@+id/emailLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_login"
                android:contentDescription="@string/contentdescription_login_image" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/editfield_margin"
                android:layout_marginTop="50dp"
                android:layout_marginRight="@dimen/editfield_margin">
                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:ems="10"
                    android:hint="@string/prompt_email"
                    android:inputType="textNoSuggestions|textWebEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/emailLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/editfield_margin"
                android:layout_marginTop="50dp"
                android:layout_marginRight="@dimen/editfield_margin"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text=""
                    android:hint="@string/prompt_password"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/signin_bottom_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:gravity="end">
        <LinearLayout
            android:id="@+id/bottomButtonsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/bottom_button_margin">
        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:text="@string/action_create_account"
            android:layout_gravity="center_horizontal"
            android:textColor="#C9DDE9"
            android:background="@drawable/buttonshape"/>
        <Button
            android:id="@+id/buttonSkip"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/action_skip"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:textColor="#C9DDE9"
            android:background="@drawable/buttonshape"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_already_have_account"
            android:layout_marginTop="-30dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>