<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimarybackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ForgotPasswordActivity">
    <include layout="@layout/statusbar"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/bottomContainer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/singlebutton_bottom_container">
    <TextView
        android:id="@+id/labelForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_forgotpassword"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"  />
    <ImageView
        android:id="@+id/imageView"
        android:layout_below="@+id/labelForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ic_forgot_password" />
    <EditText
        android:id="@+id/editTextForgotPassEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="@dimen/editfield_margin"
        android:layout_marginRight="@dimen/editfield_margin"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/prompt_email" />
    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singlebutton_bottom_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:gravity="end">
    <Button
        android:id="@+id/buttonForgotPasswordContinue"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_continue"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/bottom_button_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#C9DDE9"
        android:background="@drawable/buttonshape"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>